src/test/ui/macro_backtrace/main.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `error`
  --> $DIR/main.rs:9:20
   |
LL | / macro_rules! pong {
LL | |     () => { syntax error };
   | |                    ^^^^^ expected one of 8 possible tokens here
LL | | }
   | |_- in this expansion of `pong!`
...
LL |       pong!();
   |       -------- in this macro invocation

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `error`
  --> $DIR/main.rs:9:20
   |
LL | / macro_rules! pong {
LL | |     () => { syntax error };
   | |                    ^^^^^ expected one of 8 possible tokens here
LL | | }
   | |_- in this expansion of `pong!`
...
LL |       ping!();
   |       -------- in this macro invocation
   | 
  ::: <::ping::ping macros>:1:1
   |
LL |   (  ) => { pong ! (  ) ; }
   |   -------------------------
   |   |         |
   |   |         in this macro invocation
   |   in this expansion of `ping!`

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `error`
  --> $DIR/main.rs:9:20
   |
LL | / macro_rules! pong {
LL | |     () => { syntax error };
   | |                    ^^^^^ expected one of 8 possible tokens here
LL | | }
   | |_- in this expansion of `pong!` (#5)
...
LL |       deep!();
   |       -------- in this macro invocation (#1)
   | 
  ::: <::ping::deep macros>:1:1
   |
LL |   (  ) => { foo ! (  ) ; }
   |   ------------------------
   |   |         |
   |   |         in this macro invocation (#2)
   |   in this expansion of `deep!` (#1)
   | 
  ::: <::ping::foo macros>:1:1
   |
LL |   (  ) => { bar ! (  ) ; }
   |   ------------------------
   |   |         |
   |   |         in this macro invocation (#3)
   |   in this expansion of `foo!` (#2)
   | 
  ::: <::ping::bar macros>:1:1
   |
LL |   (  ) => { ping ! (  ) ; }
   |   -------------------------
   |   |         |
   |   |         in this macro invocation (#4)
   |   in this expansion of `bar!` (#3)
   | 
  ::: <::ping::ping macros>:1:1
   |
LL |   (  ) => { pong ! (  ) ; }
   |   -------------------------
   |   |         |
   |   |         in this macro invocation (#5)
   |   in this expansion of `ping!` (#4)

error: aborting due to 3 previous errors

